--- a/css/index-css.css
+++ b/css/index-css.css
@@ -14,3 +14,9 @@
     flex-direction: row;
     align-items:center;
 }
+.lg-m-1-s-2{
+    display: flex;
+    flex-direction: column;
+
+    color: green;
+}
